<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.droidcrypt.Embed"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <EditText
        android:id="@+id/account"
        android:inputType="text"
        android:hint="@string/account"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200sp"
        android:layout_marginBottom="20sp"
        android:textColor="@color/black_text"
    />

    <EditText
        android:id="@+id/password"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20sp"
        android:textColor="@color/black_text"
    />

    <Button
        android:id="@+id/hugostart"
        android:text="@string/start"
        android:textSize="20sp"
        android:layout_width="170sp"
        android:layout_height="80sp"
        android:layout_gravity="center"
        android:onClick="onClickHugoStart"
        android:textColor="@color/black_text"
        android:background="@color/light_blue_A700"
        android:layout_marginTop="@dimen/abc_action_button_min_height_material"
    />

</LinearLayout>
