<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.droidcrypt.Setup"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/init1"
        android:textColor="@color/blue_grey_500"
        android:textSize="32sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/init3"
        android:textColor="@color/blue_grey_500"
        android:textSize="22sp"
        android:layout_gravity="center"

        android:layout_marginTop="25dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <Button
        android:onClick="onClickBegin"
        android:textColor="@color/white_text"
        android:background="@color/indigo_400"
        android:layout_width="160sp"
        android:layout_height="60sp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        android:text="@string/setup"
    />




</LinearLayout>
