<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.droidcrypt.main"
    android:background="@color/white"
    >

    <Button
        android:id="@+id/embed"
        android:layout_width="160sp"
        android:layout_height="80sp"
        android:text="@string/embed"
        android:textSize="20sp"
        android:onClick="onClickEmbed"
        android:textColor="@color/black_text"
        android:background="@color/light_blue_A700"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/extract"
    />

    <Button
        android:id="@+id/extract"
        android:layout_width="160sp"
        android:layout_height="80sp"
        android:text="@string/extract"
        android:textSize="20sp"
        android:onClick="onClickExtract"
        android:textColor="@color/black_text"
        android:background="@color/light_blue_A700"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/abc_action_button_min_height_material"
    />

    <Button
        android:id="@+id/settings"
        android:layout_width="160sp"
        android:layout_height="80sp"
        android:text="@string/settings"
        android:textSize="20sp"
        android:textColor="@color/black_text"
        android:background="@color/light_blue_A700"
        android:layout_below="@+id/extract"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/abc_action_button_min_height_material"
    />

</RelativeLayout>
