<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.droidcrypt.Login"
    android:background="@color/white"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:layout_gravity="center"
        android:height="35dp"
        android:textColor="@color/blue_grey_500"
        android:textSize="22sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="150dp"
    />

    <EditText
        android:id="@+id/userPassword"
        android:inputType="textPassword"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/blue_grey_800"
        android:height="35dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
    />

    <Button
        android:id="@+id/login"
        android:onClick="onClickLogin"
        android:text="@string/login"
        android:textSize="22sp"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white_text"
        android:background="@color/indigo_400"
        android:height="25dp"
        android:layout_marginTop="70dp"
    />

    <Button
        android:id="@+id/retry"
        android:onClick="onClickRetry"
        android:text="@string/retry"
        android:textSize="22sp"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white_text"
        android:background="@color/indigo_400"
        android:height="25dp"
        android:layout_marginTop="70dp"
        android:visibility="gone"
    />


</LinearLayout>
