<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.droidcrypt.Login"
    android:background="@color/white"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:id="@+id/textView3"
        android:height="35dp"
        android:textColor="@color/blue_grey_500"
        android:textSize="20sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/userPassword"
            android:inputType="textPassword"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_grey_800"
            android:height="35dp"
            android:textSize="20sp"
            android:gravity="center"
             />

        <ImageView
            android:id="@+id/passImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/red" />

    </LinearLayout>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Confirm Password"
        android:id="@+id/textView4"
        android:height="35dp"
        android:textColor="@color/blue_grey_500"
        android:textSize="20sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/userConfirmPassword"
            android:inputType="textPassword"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_grey_800"
            android:height="35dp"
            android:textSize="20sp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/confirmImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/red" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:onClick="onClickShow"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/login"
        android:onClick="onClickLogin"
        android:text="@string/login"
        android:textSize="22sp"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white_text"
        android:background="@color/indigo_400"
        android:height="25dp" />

</LinearLayout>
